# Boundary models (surface, atmosphere, ocean, frontalmelt).
add_library (boundary OBJECT
  ./util/options.cc
  ./util/lapse_rates.cc
  ./atmosphere/AtmosphereModel.cc
  ./atmosphere/SeariseGreenland.cc
  ./atmosphere/YearlyCycle.cc
  ./atmosphere/CosineYearlyCycle.cc
  ./atmosphere/GivenClimate.cc
  ./atmosphere/PIK.cc
  ./atmosphere/ElevationChange.cc
  ./atmosphere/Delta_T.cc
  ./atmosphere/Delta_P.cc
  ./atmosphere/Frac_P.cc
  ./atmosphere/PrecipitationScaling.cc
  ./atmosphere/Anomaly.cc
  ./atmosphere/WeatherStation.cc
  ./atmosphere/OrographicPrecipitation.cc
  ./atmosphere/OrographicPrecipitationSerial.cc
  ./atmosphere/Factory.cc
  ./atmosphere/Uniform.cc
  ./frontalmelt/FrontalMelt.cc
  ./frontalmelt/Constant.cc
  ./frontalmelt/DischargeGiven.cc
  ./frontalmelt/DischargeRouting.cc
  ./frontalmelt/Given.cc
  ./frontalmelt/FrontalMeltPhysics.cc
  ./frontalmelt/Factory.cc
  ./ocean/OceanModel.cc
  ./ocean/CompleteOceanModel.cc
  ./ocean/Cache.cc
  ./ocean/ConstantPIK.cc
  ./ocean/Constant.cc
  ./ocean/GivenClimate.cc
  ./ocean/GivenTH.cc
  ./ocean/Anomaly.cc
  ./ocean/Delta_T.cc
  ./ocean/Delta_SMB.cc
  ./ocean/Delta_MBP.cc
  ./ocean/Frac_MBP.cc
  ./ocean/Frac_SMB.cc
  ./ocean/Runoff_SMB.cc
  ./ocean/Factory.cc
  ./ocean/Initialization.cc
  ./ocean/Pico.cc
  ./ocean/PicoPhysics.cc
  ./ocean/PicoGeometry.cc
  ./ocean/sea_level/Initialization.cc
  ./ocean/sea_level/SeaLevel.cc
  ./ocean/sea_level/Delta_SL.cc
  ./ocean/sea_level/Delta_SL_2D.cc
  ./ocean/sea_level/Factory.cc
  ./surface/Initialization.cc
  ./surface/localMassBalance.cc
  ./surface/SurfaceModel.cc
  ./surface/Cache.cc
  ./surface/ConstantPIK.cc
  ./surface/Elevation.cc
  ./surface/GivenClimate.cc
  ./surface/ISMIP6Climate.cc
  ./surface/ElevationChange.cc
  ./surface/Delta_T.cc
  ./surface/Simple.cc
  ./surface/TemperatureIndex.cc
  ./surface/ForceThickness.cc
  ./surface/Anomaly.cc
  ./surface/Factory.cc
  ./surface/Formulas.cc
  ./surface/EISMINTII.cc
  )
