# Boundary models (surface, atmosphere, ocean).
add_library (pismboundary OBJECT
  ./atmosphere/AtmosphereModel.cc
  ./atmosphere/ConstantPIK.cc
  ./atmosphere/SeariseGreenland.cc
  ./atmosphere/YearlyCycle.cc
  ./atmosphere/CosineYearlyCycle.cc
  ./atmosphere/GivenClimate.cc
  ./atmosphere/LapseRates.cc
  ./atmosphere/Delta_T.cc
  ./atmosphere/Delta_P.cc
  ./atmosphere/Frac_P.cc
  ./atmosphere/Paleo_precip.cc
  ./atmosphere/PaleoPrecip2D.cc
  ./atmosphere/Anomaly.cc
  ./atmosphere/WeatherStation.cc
  ./atmosphere/Factory.cc
  ./ocean/OceanModel.cc
  ./ocean/Cache.cc
  ./ocean/ConstantPIK.cc
  ./ocean/Constant.cc
  ./ocean/GivenClimate.cc
  ./ocean/GivenTH.cc
  ./ocean/Delta_SL.cc
  ./ocean/Delta_T.cc
  ./ocean/Delta_SMB.cc
  ./ocean/Frac_MBP.cc
  ./ocean/Frac_SMB.cc
  ./ocean/Runoff_SMB.cc
  ./ocean/Factory.cc
  ./ocean/Initialization.cc
  ./surface/Initialization.cc
  ./surface/localMassBalance.cc
  ./surface/SurfaceModel.cc
  ./surface/Cache.cc
  ./surface/ConstantPIK.cc
  ./surface/Elevation.cc
  ./surface/StuffAsAnomaly.cc
  ./surface/GivenClimate.cc
  ./surface/LapseRates.cc
  ./surface/Delta_T.cc
  ./surface/Simple.cc
  ./surface/TemperatureIndex.cc
  ./surface/ForceThickness.cc
  ./surface/Anomaly.cc
  ./surface/Factory.cc
  ./surface/Formulas.cc
  ./surface/EISMINTII.cc
  )
